struktur kerangka dasar

--- a/dicoding/tugas-akhir-membuat-website/index.html
+++ b/dicoding/tugas-akhir-membuat-website/index.html
@@ -24,21 +24,89 @@
 
 <body>
     <header class="navbar-container">
+        <!-- logo pada sisi kiri nav -->
         <div class="logo">
-            
+            <img src="assets/img/logo-name-rafi.png" alt="Rafi Syihab">
         </div>
+        <!-- navigasi ke sections dalam halaman website -->
         <nav class="nav-list">
-
+            <ul>
+                <li><a href="#portofolio">Home</a></li>
+                <li><a href="#portofolio">Portofolio</a></li>
+                <li><a href="#about">about</a></li>
+                <li><a href="#testimonials">Testominial</a></li>
+            </ul>
         </nav>
     </header>
 
     <main>
         <div class="content">
+            <!-- TODO -->
+            <div class="hero">
+                <div class="hero-description">
+                    <h1 class="title">Rafi Syihab | React & Back-End Developer</h1>
+                    <p>Full-stack web developer dengan Passion untuk Menciptakan Aplikasi Web yang Inovatif dan
+                        User-Friendly
+                    </p>
+                    
+                    <!-- Pergi ke github pages -->
+                    <button id="portoButton" type="button">Learning Journey</button>
+                </div>
 
+                <div class="hero-image">
+                    <img src="assets/img/logo-rafi.png" alt="logo character">
+                </div>
+            </div>
+
+            <!-- TODO -->
+            <article class="portofolio">
+                <h2>Latest Project</h2>
+                <section class="project">
+
+                    <!-- https://coffeeancuy.000webhostapp.com/ -->
+                </section>
+            </article>
+
+            <article class="about">
+                <section class="introduction">
+                    <h2>Tentang Saya</h2>
+                    <p>Halo! Saya Rafi Syihab, seorang cohort Dicoding path Pengembang React & Back-End.
+                        Saya memiliki passion untuk membangun aplikasi yang memberikan pengalaman pengguna yang luar
+                        biasa.</p>
+                </section>
+                <section class="skill">
+                    <h3>Keahlian</h3>
+                    <p>Saya telah mengembangkan keahlian dalam C++, Lua, Java, HTML, CSS, dan JavaScript.</p>
+                </section>
+                <section class="personal-interests">
+                    <h3>Minat Pribadi</h3>
+                    <p>Di luar pekerjaan, saya menikmati bermnain game, videografi, dan fotografi, yang membantu saya
+                        mendapatkan perspektif
+                        baru dan meningkatkan kreativitas saya.</p>
+                </section>
+            </article>
+
+            <!-- testimoni teman-teman -->
+            <article class="testimonial">
+                <section class="testimonial-content">
+                    <blockquote>
+                        "Ulasan dari klien atau rekan kerja."
+                        <footer>— Nama Sumber, Jabatan</footer>
+                    </blockquote>
+                </section>
+            </article>
         </div>
 
         <aside>
+            <div class="profile card">
+                <header>
+                    <!-- TODO : profil diri -->
+                </header>
 
+                <section class="contact-info"></section>
+                <section class="skills"></section>
+                <section class="latest-notes"></section>
+            </div>
         </aside>
     </main>
 
