div class content editing

--- a/dicoding/tugas-akhir-membuat-website/index.html
+++ b/dicoding/tugas-akhir-membuat-website/index.html
@@ -101,6 +101,7 @@
             <div class="profile card">
                 <header>
                     <!-- TODO : profil diri -->
+                    <h1>ini aside</h1>
                 </header>
 
                 <section class="contact-info"></section>
