--- a/dicoding/tugas-akhir-membuat-website/index.html
+++ b/dicoding/tugas-akhir-membuat-website/index.html
@@ -46,9 +46,11 @@
                 <div class="hero-description">
                     <h1 class="title">Rafi Syihab | React & Back-End Developer</h1>
                     <p>Full-stack web developer dengan Passion untuk Menciptakan Aplikasi Web yang Inovatif dan
-                        User-Friendly
+                        User-Friendly. Saya mengkhususkan diri dalam mengembangkan solusi yang dinamis dan intuitif.
+                        Ketika tidak sedang mengejar deadline, saya memanfaatkan waktu untuk berajar hal baru dan
+                        bermain.
                     </p>
-                    
+
                     <!-- Pergi ke github pages -->
                     <button id="portoButton" type="button">Learning Journey</button>
                 </div>
