add js pada button

--- a/dicoding/tugas-akhir-membuat-website/index.html
+++ b/dicoding/tugas-akhir-membuat-website/index.html
@@ -34,7 +34,7 @@
                 <li><a href="#portofolio">Home</a></li>
                 <li><a href="#portofolio">Portofolio</a></li>
                 <li><a href="#about">about</a></li>
-                <li><a href="#testimonials">Testominial</a></li>
+                <li><a href="#testimonials">Testimonial</a></li>
             </ul>
         </nav>
     </header>
@@ -47,8 +47,8 @@
                     <h1 class="title">Rafi Syihab | React & Back-End Developer</h1>
                     <p>Full-stack web developer dengan Passion untuk Menciptakan Aplikasi Web yang Inovatif dan
                         User-Friendly. Saya mengkhususkan diri dalam mengembangkan solusi yang dinamis dan intuitif.
-                        Ketika tidak sedang mengejar deadline, saya memanfaatkan waktu untuk berajar hal baru dan
-                        bermain.
+                        Ketika tidak sedang mengejar deadline, saya memanfaatkan waktu untuk mengasah kemampuan dengan
+                        menerapkan teknik <em>one commit everyday</em>.
                     </p>
 
                     <!-- Pergi ke github pages -->
@@ -116,6 +116,9 @@
     <footer>
 
     </footer>
+
+    <!-- load script ketika DOM dimuat -->
+    <script src="assets/js/app.js"></script>
 </body>
 
 </html>
