--- a/dicoding/tugas-akhir-membuat-website/index.html
+++ b/dicoding/tugas-akhir-membuat-website/index.html
@@ -45,9 +45,9 @@
             <div class="hero">
                 <div class="hero-description">
                     <h1 class="title">Rafi Syihab | React & Back-End Developer</h1>
-                    <p>Full-stack web developer dengan Passion untuk Menciptakan Aplikasi Web yang Inovatif dan
-                        User-Friendly. Saya mengkhususkan diri dalam mengembangkan solusi yang dinamis dan intuitif.
-                        Ketika tidak sedang mengejar deadline, saya memanfaatkan waktu untuk mengasah kemampuan dengan
+                    <p><em>Full-stack web developer</em> dengan Passion untuk Menciptakan Aplikasi Web yang Inovatif dan
+                        <em>User-Friendly</em>. Saya mengkhususkan diri dalam mengembangkan solusi yang dinamis dan intuitif.
+                        Ketika tidak sedang mengejar <em>deadline</em>, saya memanfaatkan waktu untuk mengasah kemampuan dengan
                         menerapkan teknik <em>one commit everyday</em>.
                     </p>
 
