latest project ruling

--- a/dicoding/tugas-akhir-membuat-website/index.html
+++ b/dicoding/tugas-akhir-membuat-website/index.html
@@ -46,8 +46,10 @@
                 <div class="hero-description">
                     <h1 class="title">Rafi Syihab | React & Back-End Developer</h1>
                     <p><em>Full-stack web developer</em> dengan Passion untuk Menciptakan Aplikasi Web yang Inovatif dan
-                        <em>User-Friendly</em>. Saya mengkhususkan diri dalam mengembangkan solusi yang dinamis dan intuitif.
-                        Ketika tidak sedang mengejar <em>deadline</em>, saya memanfaatkan waktu untuk mengasah kemampuan dengan
+                        <em>User-Friendly</em>. Saya mengkhususkan diri dalam mengembangkan solusi yang dinamis dan
+                        intuitif.
+                        Ketika tidak sedang mengejar <em>deadline</em>, saya memanfaatkan waktu untuk mengasah kemampuan
+                        dengan
                         menerapkan teknik <em>one commit everyday</em>.
                     </p>
 
@@ -63,10 +65,35 @@
             <!-- TODO -->
             <article class="portofolio">
                 <h2>Latest Project</h2>
-                <section class="project">
-
-                    <!-- https://coffeeancuy.000webhostapp.com/ -->
-                </section>
+                <div class="porto-list">
+                    <section class="project">
+                        <div class="project-image">
+                            <img src="assets/img/porto1-coffeean.png" alt="CoffeeanCo">
+                        </div>
+                        <div class="project-description">
+                            <p><em>Website</em> penjualan biji kopi dengan penerapan teknik <em>up selling.</em></p>
+                            <a href="https://coffeeancuy.000webhostapp.com/" target="_blank">Ingin Melihat?</a>
+                        </div>
+                    </section>
+                    <section class="project">
+                        <div class="project-image">
+                            <img src="assets/img/porto2-profilbandung.png" alt="Profil Bandung">
+                        </div>
+                        <div class="project-description">
+                            <p><em>Website</em> profil dari kota Bandung</p>
+                            <a href="https://rfsyhb.github.io/dicoding/dasar-pemrograman-web/index.html" target="_blank">Ingin Melihat?</a>
+                        </div>
+                    </section>
+                    <section class="project">
+                        <div class="project-image">
+                            <img src="assets/img/porto3-landingpagedicoding.png" alt="Landing Page Dicoding">
+                        </div>
+                        <div class="project-description">
+                            <p><em>Website landing page</em> Dicoding Indonesia.</p>
+                            <a href="https://rfsyhb.github.io/dicoding/dasar-pemrograman-web/index.html" target="_blank">Ingin Melihat?</a>
+                        </div>
+                    </section>
+                </div>
             </article>
 
             <article class="about">
