--- a/dicoding/tugas-akhir-membuat-website/index.html
+++ b/dicoding/tugas-akhir-membuat-website/index.html
@@ -81,7 +81,8 @@
                         </div>
                         <div class="project-description">
                             <p><em>Website</em> profil dari kota Bandung</p>
-                            <a href="https://rfsyhb.github.io/dicoding/dasar-pemrograman-web/index.html" target="_blank">Ingin Melihat?</a>
+                            <a href="https://rfsyhb.github.io/dicoding/dasar-pemrograman-web/index.html"
+                                target="_blank">Ingin Melihat?</a>
                         </div>
                     </section>
                     <section class="project">
@@ -90,38 +91,108 @@
                         </div>
                         <div class="project-description">
                             <p><em>Website landing page</em> Dicoding Indonesia.</p>
-                            <a href="https://rfsyhb.github.io/dicoding/dasar-pemrograman-web/index.html" target="_blank">Ingin Melihat?</a>
+                            <a href="https://rfsyhb.github.io/dicoding/dasar-pemrograman-web/index.html"
+                                target="_blank">Ingin Melihat?</a>
                         </div>
                     </section>
                 </div>
             </article>
 
             <article class="about">
-                <section class="introduction">
-                    <h2>Tentang Saya</h2>
-                    <p>Halo! Saya Rafi Syihab, seorang cohort Dicoding path Pengembang React & Back-End.
-                        Saya memiliki passion untuk membangun aplikasi yang memberikan pengalaman pengguna yang luar
-                        biasa.</p>
-                </section>
+                <h2>Tentang Saya</h2>
+                <p>Halo! Saya Rafi Syihab, seorang <em>cohort</em> Dicoding <em>path</em> Pengembang <em>React &
+                        Back-End</em>. Saya adalah peserta studi independen yang antusias, sedang menempuh perjalanan
+                    belajar intensif di Dicoding sebagai calon <em>full-stack web developer</em>. Fokus saya saat ini
+                    adalah mengasah keahlian dalam <em>React</em> untuk <em>front-end</em>
+                    dan teknologi <em>back-end</em> yang sesuai dengan standar industri. Saya berkomitmen untuk
+                    mengembangkan aplikasi web yang tidak hanya inovatif dan <em>user-friendly</em>, tetapi juga yang
+                    memenuhi kebutuhan nyata pengguna. Di saat senggang, waktu saya diisi dengan belajar konsep baru dan
+                    meningkatkan kemampuan pemrograman sambil meluangkan waktu untuk bermain dan mengeksplorasi hobi.
+                </p>
                 <section class="skill">
                     <h3>Keahlian</h3>
-                    <p>Saya telah mengembangkan keahlian dalam C++, Lua, Java, HTML, CSS, dan JavaScript.</p>
+                    <p>
+                        Saya telah mengembangkan keahlian dalam beberapa pemrograman yaitu Python, Java, HTML, CSS, PHP,
+                        dan JavaScript.
+                    </p>
+                    <!-- TODO : Buat gambar -->
+                    <div class="skill-container">
+                        <article class="skill-card">
+                            <h4>Python</h4>
+                            <p>Desain dan implementasi algoritma <em>shortest path</em> untuk menyelesaikan masalah rute
+                                terpendek, serta pengembangan skrip untuk <em>scanning pixel</em> pada layar secara
+                                otomatis.</p>
+                        </article>
+                        <article class="skill-card">
+                            <h4>Java</h4>
+                            <p>Pengembangan game Flappy Bird versi sederhana menggunakan Java, termasuk mekanisme
+                                kontrol dan skor, serta pembuatan kalkulator.
+                            </p>
+                        </article>
+                        <article class="skill-card">
+                            <h4>HTML</h4>
+                            <p>Penataan struktur <em>website</em> dengan HTML, menggunakan elemen-elemen semantik untuk
+                                meningkatkan aksesibilitas dan SEO.</p>
+                        </article>
+                        <article class="skill-card">
+                            <h4>CSS</h4>
+                            <p>Penerapan CSS untuk mendesain halaman web yang responsif dan menarik, meliputi
+                                <em>layout</em>,
+                                tipografi, dan skema warna.
+                            </p>
+                        </article>
+                        <article class="skill-card">
+                            <h4>PHP</h4>
+                            <p><em>Development</em> web dinamis dengan PHP, termasuk manipulasi data dan interaksi
+                                dengan basis
+                                data MySQL untuk aplikasi web yang interaktif.</p>
+                        </article>
+                        <article class="skill-card">
+                            <h4>JavaScript</h4>
+                            <p><em>Enhancement</em> interaktivitas pada halaman web dengan manipulasi DOM dan penanganan
+                                <em>event</em>
+                                menggunakan JavaScript.
+                            </p>
+                        </article>
+                    </div>
                 </section>
-                <section class="personal-interests">
-                    <h3>Minat Pribadi</h3>
-                    <p>Di luar pekerjaan, saya menikmati bermnain game, videografi, dan fotografi, yang membantu saya
-                        mendapatkan perspektif
-                        baru dan meningkatkan kreativitas saya.</p>
-                </section>
-            </article>
 
-            <!-- testimoni teman-teman -->
-            <article class="testimonial">
-                <section class="testimonial-content">
-                    <blockquote>
-                        "Ulasan dari klien atau rekan kerja."
-                        <footer>— Nama Sumber, Jabatan</footer>
-                    </blockquote>
+                <section class="testimonial">
+                    <h3>Rafi Syihab di Mata Orang Lain</h3>
+                    <section class="testimonial-content">
+                        <figure>
+                            <blockquote>
+                                <q>Bekerja sama dengan Rafi adalah pengalaman yang memperkaya. Dia tidak hanya memenuhi
+                                    ekspektasi kami dengan solusi koding yang efisien dan inovatif, tetapi juga
+                                    menambahkan
+                                    nilai luar biasa dengan pandangannya yang strategis.</q>
+                                <figcaption>— Hidayat, Teman Sekelas Jurusan Teknik Informatika</figcaption>
+                            </blockquote>
+                        </figure>
+                    </section>
+                    <section class="testimonial-content">
+                        <figure>
+                            <blockquote>
+                                <q>Saya berkesempatan bekerja bersama Rafi dalam beberapa proyek pengembangan web. Saya
+                                    selalu terkesan dengan pendekatan sistematis dan perhatiannya terhadap detail.</q>
+                                <figcaption>— Azizah, Teman Sekelas Jurusan Teknik Informatika</figcaption>
+                            </blockquote>
+                        </figure>
+                    </section>
+                    <section class="testimonial-content">
+                        <figure>
+                            <blockquote>
+                                <q>Rafi adalah salah satu programmer terbaik yang saya kenal di kampus. Dia selalu punya
+                                    solusi kreatif untuk setiap masalah coding yang kita hadapi bersama. Apa yang saya
+                                    kagumi adalah kemampuannya untuk mengajari orang lain dengan sabar, membuat konsep
+                                    yang
+                                    kompleks menjadi mudah dipahami. Saya yakin dia akan menjadi aset berharga di mana
+                                    pun
+                                    dia bekerja.</q>
+                                <figcaption>— Halim, Teman Sekelas Jurusan Teknik Informatika</figcaption>
+                            </blockquote>
+                        </figure>
+                    </section>
                 </section>
             </article>
         </div>
