--- a/dicoding/tugas-akhir-membuat-website/index.html
+++ b/dicoding/tugas-akhir-membuat-website/index.html
@@ -109,7 +109,7 @@
                     memenuhi kebutuhan nyata pengguna. Di saat senggang, waktu saya diisi dengan belajar konsep baru dan
                     meningkatkan kemampuan pemrograman sambil meluangkan waktu untuk bermain dan mengeksplorasi hobi.
                 </p>
-                <section class="skill">
+                <section class="skill card">
                     <h3>Keahlian</h3>
                     <p>
                         Saya telah mengembangkan keahlian dalam beberapa pemrograman yaitu Python, Java, HTML, CSS, PHP,
@@ -157,7 +157,7 @@
                     </div>
                 </section>
 
-                <section class="testimonial">
+                <section class="testimonial card">
                     <h3>Rafi Syihab di Mata Orang Lain</h3>
                     <section class="testimonial-content">
                         <figure>
