--- a/dicoding/tugas-akhir-membuat-website/index.html
+++ b/dicoding/tugas-akhir-membuat-website/index.html
@@ -159,40 +159,49 @@
 
                 <section class="testimonial card">
                     <h3>Rafi Syihab di Mata Orang Lain</h3>
-                    <section class="testimonial-content">
-                        <figure>
-                            <blockquote>
-                                <q>Bekerja sama dengan Rafi adalah pengalaman yang memperkaya. Dia tidak hanya memenuhi
-                                    ekspektasi kami dengan solusi koding yang efisien dan inovatif, tetapi juga
-                                    menambahkan
-                                    nilai luar biasa dengan pandangannya yang strategis.</q>
-                                <figcaption>— Hidayat, Teman Sekelas Jurusan Teknik Informatika</figcaption>
-                            </blockquote>
-                        </figure>
-                    </section>
-                    <section class="testimonial-content">
-                        <figure>
-                            <blockquote>
-                                <q>Saya berkesempatan bekerja bersama Rafi dalam beberapa proyek pengembangan web. Saya
-                                    selalu terkesan dengan pendekatan sistematis dan perhatiannya terhadap detail.</q>
-                                <figcaption>— Azizah, Teman Sekelas Jurusan Teknik Informatika</figcaption>
-                            </blockquote>
-                        </figure>
-                    </section>
-                    <section class="testimonial-content">
-                        <figure>
-                            <blockquote>
-                                <q>Rafi adalah salah satu programmer terbaik yang saya kenal di kampus. Dia selalu punya
-                                    solusi kreatif untuk setiap masalah coding yang kita hadapi bersama. Apa yang saya
-                                    kagumi adalah kemampuannya untuk mengajari orang lain dengan sabar, membuat konsep
-                                    yang
-                                    kompleks menjadi mudah dipahami. Saya yakin dia akan menjadi aset berharga di mana
-                                    pun
-                                    dia bekerja.</q>
-                                <figcaption>— Halim, Teman Sekelas Jurusan Teknik Informatika</figcaption>
-                            </blockquote>
-                        </figure>
-                    </section>
+                    <div class="testimonial-container">
+                        <section class="testimonial-content">
+                            <figure>
+                                <blockquote>
+                                    <q>Bekerja sama dengan Rafi adalah pengalaman yang memperkaya. Dia tidak hanya
+                                        memenuhi
+                                        ekspektasi kami dengan solusi koding yang efisien dan inovatif, tetapi juga
+                                        menambahkan
+                                        nilai luar biasa dengan pandangannya yang strategis.</q>
+                                    <figcaption>— Hidayat, Teman Sekelas Jurusan Teknik Informatika</figcaption>
+                                </blockquote>
+                            </figure>
+                        </section>
+                        <section class="testimonial-content">
+                            <figure>
+                                <blockquote>
+                                    <q>Saya berkesempatan bekerja bersama Rafi dalam beberapa proyek pengembangan web.
+                                        Saya
+                                        selalu terkesan dengan pendekatan sistematis dan perhatiannya terhadap
+                                        detail.</q>
+                                    <figcaption>— Azizah, Teman Sekelas Jurusan Teknik Informatika</figcaption>
+                                </blockquote>
+                            </figure>
+                        </section>
+                        <section class="testimonial-content">
+                            <figure>
+                                <blockquote>
+                                    <q>Rafi adalah salah satu programmer terbaik yang saya kenal di kampus. Dia selalu
+                                        punya
+                                        solusi kreatif untuk setiap masalah coding yang kita hadapi bersama. Apa yang
+                                        saya
+                                        kagumi adalah kemampuannya untuk mengajari orang lain dengan sabar, membuat
+                                        konsep
+                                        yang
+                                        kompleks menjadi mudah dipahami. Saya yakin dia akan menjadi aset berharga di
+                                        mana
+                                        pun
+                                        dia bekerja.</q>
+                                    <figcaption>— Halim, Teman Sekelas Jurusan Teknik Informatika</figcaption>
+                                </blockquote>
+                            </figure>
+                        </section>
+                    </div>
                 </section>
             </article>
         </div>
@@ -201,11 +210,33 @@
             <div class="profile card">
                 <header>
                     <!-- TODO : profil diri -->
-                    <h1>ini aside</h1>
+                    <h2>My Profile</h2>
+                    <figure>
+                        <img src="assets/img/gambar-rafi.png" alt="Rafi Syihab">
+                        <figcaption>Rafi Syihab</figcaption>
+                    </figure>
                 </header>
 
-                <section class="contact-info"></section>
-                <section class="skills"></section>
+                <section class="bio">
+                    <p>Saya adalah seorang Full-Stack Web Developer dengan pengalaman luas dalam pengembangan aplikasi
+                        web yang responsif dan user-friendly. Saya memiliki keahlian khusus dalam React untuk front-end
+                        dan berbagai teknologi back-end. Saya terus berusaha untuk belajar dan mengasah keterampilan
+                        saya setiap hari untuk menjadi lebih baik.</p>
+                </section>
+                <section class="contact-info">
+                    <h3>Kontak</h3>
+                    <p>Email: rafi@example.com</p>
+                    <p>LinkedIn: linkedin.com/in/rafi-syihab</p>
+                </section>
+                <section class="skills">
+                    <h3>Keahlian</h3>
+                    <ul>
+                        <li>React</li>
+                        <li>Node.js</li>
+                        <li>Database Management</li>
+                        <li>UI/UX Design</li>
+                    </ul>
+                </section>
                 <section class="latest-notes"></section>
             </div>
         </aside>
