--- a/dicoding/tugas-akhir-membuat-website/index.html
+++ b/dicoding/tugas-akhir-membuat-website/index.html
@@ -213,15 +213,12 @@
                     <h2>My Profile</h2>
                     <figure>
                         <img src="assets/img/gambar-rafi.png" alt="Rafi Syihab">
-                        <figcaption>Rafi Syihab</figcaption>
                     </figure>
                 </header>
 
                 <section class="bio">
-                    <p>Saya adalah seorang Full-Stack Web Developer dengan pengalaman luas dalam pengembangan aplikasi
-                        web yang responsif dan user-friendly. Saya memiliki keahlian khusus dalam React untuk front-end
-                        dan berbagai teknologi back-end. Saya terus berusaha untuk belajar dan mengasah keterampilan
-                        saya setiap hari untuk menjadi lebih baik.</p>
+                    <h3>About Me</h3>
+                    <p>Full-Stack Web Developer, heavy eye bags, dehydrated, and caffeinated</p>
                 </section>
                 <section class="contact-info">
                     <h3>Kontak</h3>
@@ -229,7 +226,7 @@
                     <p>LinkedIn: linkedin.com/in/rafi-syihab</p>
                 </section>
                 <section class="skills">
-                    <h3>Keahlian</h3>
+                    <h3>Skills</h3>
                     <ul>
                         <li>React</li>
                         <li>Node.js</li>
