bingung tapi lancar

--- a/dicoding/tugas-akhir-membuat-website/index.html
+++ b/dicoding/tugas-akhir-membuat-website/index.html
@@ -39,31 +39,33 @@
         </nav>
     </header>
 
-    <main>
-        <div class="hero">
-            <div class="hero-description">
-                <h1 class="title">Rafi Syihab | React & Back-End Developer</h1>
-                <p><em>Full-stack web developer</em> dengan Passion untuk Menciptakan Aplikasi Web yang Inovatif dan
-                    <em>User-Friendly</em>. Saya mengkhususkan diri dalam mengembangkan solusi yang dinamis dan
-                    intuitif.
-                    Ketika tidak sedang mengejar <em>deadline</em>, saya memanfaatkan waktu untuk mengasah kemampuan
-                    dengan
-                    menerapkan teknik <em>one commit everyday</em>.
-                </p>
-
-                <!-- Pergi ke github pages -->
-                <button id="portoButton" type="button">Learning Journey</button>
-            </div>
-
-            <div class="hero-image">
-                <img src="assets/img/logo-rafi.png" alt="logo character">
+    <section class="hero">
+        <div class="hero-content">
+            <div class="hero-container">
+                <div class="hero-description">
+                    <h1 class="title">Rafi Syihab | React & Back-End Developer</h1>
+                    <p><em>Full-stack web developer</em> dengan Passion untuk Menciptakan Aplikasi Web yang Inovatif dan
+                        <em>User-Friendly</em>. Saya mengkhususkan diri dalam mengembangkan solusi yang dinamis dan
+                        intuitif.
+                        Ketika tidak sedang mengejar <em>deadline</em>, saya memanfaatkan waktu untuk mengasah kemampuan
+                        dengan
+                        menerapkan teknik <em>one commit everyday</em>.
+                    </p>
+    
+                    <!-- Pergi ke github pages -->
+                    <button id="portoButton" type="button">Learning Journey</button>
+                </div>
+    
+                <div class="hero-image">
+                    <img src="assets/img/logo-rafi.png" alt="logo character">
+                </div>
             </div>
         </div>
+    </section>
+
+    <main style="background-color: aquamarine;">
         <div class="container">
             <div class="content">
-                <!-- TODO -->
-
-                <!-- TODO -->
                 <article class="portofolio">
                     <h2>Latest Project</h2>
                     <div class="porto-list">
