--- a/dicoding/tugas-akhir-membuat-website/index.html
+++ b/dicoding/tugas-akhir-membuat-website/index.html
@@ -40,30 +40,26 @@
     </header>
 
     <section class="hero">
-        <div class="hero-content">
-            <div class="hero-container">
-                <div class="hero-description">
-                    <h1 class="title">Rafi Syihab | React & Back-End Developer</h1>
-                    <p><em>Full-stack web developer</em> dengan Passion untuk Menciptakan Aplikasi Web yang Inovatif dan
-                        <em>User-Friendly</em>. Saya mengkhususkan diri dalam mengembangkan solusi yang dinamis dan
-                        intuitif.
-                        Ketika tidak sedang mengejar <em>deadline</em>, saya memanfaatkan waktu untuk mengasah kemampuan
-                        dengan
-                        menerapkan teknik <em>one commit everyday</em>.
-                    </p>
-    
-                    <!-- Pergi ke github pages -->
-                    <button id="portoButton" type="button">Learning Journey</button>
-                </div>
-    
-                <div class="hero-image">
-                    <img src="assets/img/logo-rafi.png" alt="logo character">
-                </div>
+        <div class="hero-container">
+            <div class="hero-description">
+                <h1 class="title">Rafi Syihab | React & Back-End Developer</h1>
+                <p><em>Full-stack web developer</em> dengan Passion untuk Menciptakan Aplikasi Web yang Inovatif dan
+                    <em>User-Friendly</em>. Saya mengkhususkan diri dalam mengembangkan solusi yang dinamis dan
+                    intuitif. Ketika tidak sedang mengejar <em>deadline</em>, saya memanfaatkan waktu untuk mengasah
+                    kemampuan dengan menerapkan teknik <em>one commit everyday</em>.
+                </p>
+
+                <!-- Pergi ke github pages -->
+                <button id="portoButton" type="button">Learning Journey</button>
+            </div>
+
+            <div class="hero-image">
+                <img src="assets/img/logo-rafi.png" alt="logo character">
             </div>
         </div>
     </section>
 
-    <main style="background-color: aquamarine;">
+    <main>
         <div class="container">
             <div class="content">
                 <article class="portofolio">
@@ -105,33 +101,27 @@
                     <h2>Tentang Saya</h2>
                     <p>Halo! Saya Rafi Syihab, seorang <em>cohort</em> Dicoding <em>path</em> Pengembang <em>React &
                             Back-End</em>. Saya adalah peserta studi independen yang antusias, sedang menempuh
-                        perjalanan
-                        belajar intensif di Dicoding sebagai calon <em>full-stack web developer</em>. Fokus saya saat
-                        ini
-                        adalah mengasah keahlian dalam <em>React</em> untuk <em>front-end</em>
+                        perjalanan belajar intensif di Dicoding sebagai calon <em>full-stack web developer</em>. Fokus
+                        saya saat ini adalah mengasah keahlian dalam <em>React</em> untuk <em>front-end</em>
                         dan teknologi <em>back-end</em> yang sesuai dengan standar industri. Saya berkomitmen untuk
                         mengembangkan aplikasi web yang tidak hanya inovatif dan <em>user-friendly</em>, tetapi juga
-                        yang
-                        memenuhi kebutuhan nyata pengguna. Di saat senggang, waktu saya diisi dengan belajar konsep baru
-                        dan
-                        meningkatkan kemampuan pemrograman sambil meluangkan waktu untuk bermain dan mengeksplorasi
-                        hobi.
+                        yang memenuhi kebutuhan nyata pengguna. Di saat senggang, waktu saya diisi dengan belajar konsep
+                        baru dan meningkatkan kemampuan pemrograman sambil meluangkan waktu untuk bermain dan
+                        mengeksplorasi hobi.
                     </p>
                     <section class="skill card">
                         <h3>Keahlian</h3>
                         <p>
                             Saya telah mengembangkan keahlian dalam beberapa pemrograman yaitu Python, Java, HTML, CSS,
-                            PHP,
-                            dan JavaScript.
+                            PHP, dan JavaScript.
                         </p>
                         <!-- TODO : Buat gambar -->
                         <div class="skill-container">
                             <article class="skill-card">
                                 <h4>Python</h4>
                                 <p>Desain dan implementasi algoritma <em>shortest path</em> untuk menyelesaikan masalah
-                                    rute
-                                    terpendek, serta pengembangan skrip untuk <em>scanning pixel</em> pada layar secara
-                                    otomatis.</p>
+                                    rute terpendek, serta pengembangan skrip untuk <em>scanning pixel</em> pada layar
+                                    secara otomatis.</p>
                             </article>
                             <article class="skill-card">
                                 <h4>Java</h4>
@@ -142,28 +132,23 @@
                             <article class="skill-card">
                                 <h4>HTML</h4>
                                 <p>Penataan struktur <em>website</em> dengan HTML, menggunakan elemen-elemen semantik
-                                    untuk
-                                    meningkatkan aksesibilitas dan SEO.</p>
+                                    untuk meningkatkan aksesibilitas dan SEO.</p>
                             </article>
                             <article class="skill-card">
                                 <h4>CSS</h4>
                                 <p>Penerapan CSS untuk mendesain halaman web yang responsif dan menarik, meliputi
-                                    <em>layout</em>,
-                                    tipografi, dan skema warna.
+                                    <em>layout</em>, tipografi, dan skema warna.
                                 </p>
                             </article>
                             <article class="skill-card">
                                 <h4>PHP</h4>
                                 <p><em>Development</em> web dinamis dengan PHP, termasuk manipulasi data dan interaksi
-                                    dengan basis
-                                    data MySQL untuk aplikasi web yang interaktif.</p>
+                                    dengan basis data MySQL untuk aplikasi web yang interaktif.</p>
                             </article>
                             <article class="skill-card">
                                 <h4>JavaScript</h4>
                                 <p><em>Enhancement</em> interaktivitas pada halaman web dengan manipulasi DOM dan
-                                    penanganan
-                                    <em>event</em>
-                                    menggunakan JavaScript.
+                                    penanganan <em>event</em> menggunakan JavaScript.
                                 </p>
                             </article>
                         </div>
@@ -176,10 +161,9 @@
                                 <figure>
                                     <blockquote>
                                         <q>Bekerja sama dengan Rafi adalah pengalaman yang memperkaya. Dia tidak hanya
-                                            memenuhi
-                                            ekspektasi kami dengan solusi koding yang efisien dan inovatif, tetapi juga
-                                            menambahkan
-                                            nilai luar biasa dengan pandangannya yang strategis.</q>
+                                            memenuhi ekspektasi kami dengan solusi koding yang efisien dan inovatif,
+                                            tetapi juga menambahkan nilai luar biasa dengan pandangannya yang
+                                            strategis.</q>
                                         <figcaption>— Hidayat, Teman Sekelas Jurusan Teknik Informatika</figcaption>
                                     </blockquote>
                                 </figure>
@@ -188,10 +172,8 @@
                                 <figure>
                                     <blockquote>
                                         <q>Saya berkesempatan bekerja bersama Rafi dalam beberapa proyek pengembangan
-                                            web.
-                                            Saya
-                                            selalu terkesan dengan pendekatan sistematis dan perhatiannya terhadap
-                                            detail.</q>
+                                            web. Saya selalu terkesan dengan pendekatan sistematis dan perhatiannya
+                                            terhadap detail.</q>
                                         <figcaption>— Azizah, Teman Sekelas Jurusan Teknik Informatika</figcaption>
                                     </blockquote>
                                 </figure>
@@ -200,19 +182,11 @@
                                 <figure>
                                     <blockquote>
                                         <q>Rafi adalah salah satu programmer terbaik yang saya kenal di kampus. Dia
-                                            selalu
-                                            punya
-                                            solusi kreatif untuk setiap masalah coding yang kita hadapi bersama. Apa
-                                            yang
-                                            saya
-                                            kagumi adalah kemampuannya untuk mengajari orang lain dengan sabar, membuat
-                                            konsep
-                                            yang
+                                            selalu punya solusi kreatif untuk setiap masalah coding yang kita hadapi
+                                            bersama. Apa yang saya kagumi adalah kemampuannya untuk mengajari orang lain
+                                            dengan sabar, membuat konsep yang
                                             kompleks menjadi mudah dipahami. Saya yakin dia akan menjadi aset berharga
-                                            di
-                                            mana
-                                            pun
-                                            dia bekerja.</q>
+                                            di mana pun dia bekerja.</q>
                                         <figcaption>— Halim, Teman Sekelas Jurusan Teknik Informatika</figcaption>
                                     </blockquote>
                                 </figure>
@@ -225,39 +199,32 @@
             <aside>
                 <div class="profile card">
                     <header>
-                        <!-- TODO : profil diri -->
-                        <h2>My Profile</h2>
                         <figure>
                             <img src="assets/img/gambar-rafi.png" alt="Rafi Syihab">
+                            <figcaption>
+                                <h3>Rafi Syihab</h3>
+                                <p>Web Developer</p>
+                            </figcaption>
                         </figure>
                     </header>
 
-                    <section class="bio">
-                        <h3>About Me</h3>
+                    <section class="profile-description">
                         <p>Full-Stack Web Developer, heavy eye bags, dehydrated, and caffeinated</p>
+                        <a href="mailto:rafisyihab3@gmail.com" class="profile-email">rafisyihab3@gmail.com</a>
                     </section>
-                    <section class="contact-info">
-                        <h3>Kontak</h3>
-                        <p>Email: rafi@example.com</p>
-                        <p>LinkedIn: linkedin.com/in/rafi-syihab</p>
+                    <section class="profile-social-links">
+                        <a href="#" class="fab fa-github"></a>
+                        <a href="#" class="fab fa-linkedin-in"></a>
+                        <a href="#" class="fab fa-facebook"></a>
+                        <a href="#" class="fab fa-instagram"></a>
                     </section>
-                    <section class="skills">
-                        <h3>Skills</h3>
-                        <ul>
-                            <li>React</li>
-                            <li>Node.js</li>
-                            <li>Database Management</li>
-                            <li>UI/UX Design</li>
-                        </ul>
-                    </section>
-                    <section class="latest-notes"></section>
                 </div>
             </aside>
         </div>
     </main>
 
     <footer>
-
+        <p>&copy; 2024 Rafi Syihab. All rights reserved.</p>
     </footer>
 
     <!-- load script ketika DOM dimuat -->
