--- a/dicoding/tugas-akhir-membuat-website/index.html
+++ b/dicoding/tugas-akhir-membuat-website/index.html
@@ -31,15 +31,15 @@
         <!-- navigasi ke sections dalam halaman website -->
         <nav class="nav-list">
             <ul>
-                <li><a href="#portofolio">Home</a></li>
+                <li><a href="#home">Home</a></li>
                 <li><a href="#portofolio">Portofolio</a></li>
                 <li><a href="#about">about</a></li>
-                <li><a href="#testimonials">Testimonial</a></li>
+                <li><a href="#testimonial">Testimonial</a></li>
             </ul>
         </nav>
     </header>
 
-    <section class="hero">
+    <section class="hero" id="home">
         <div class="hero-container">
             <div class="hero-description">
                 <h1 class="title">Rafi Syihab | React & Back-End Developer</h1>
@@ -62,7 +62,7 @@
     <main>
         <div class="container">
             <div class="content">
-                <article class="portofolio">
+                <article class="portofolio" id="portofolio">
                     <h2>Latest Project</h2>
                     <div class="porto-list">
                         <section class="project">
@@ -97,7 +97,7 @@
                     </div>
                 </article>
 
-                <article class="about">
+                <article class="about" id="about">
                     <h2>Tentang Saya</h2>
                     <p>Halo! Saya Rafi Syihab, seorang <em>cohort</em> Dicoding <em>path</em> Pengembang <em>React &
                             Back-End</em>. Saya adalah peserta studi independen yang antusias, sedang menempuh
@@ -154,7 +154,7 @@
                         </div>
                     </section>
 
-                    <section class="testimonial card">
+                    <section class="testimonial card" id="testimonial">
                         <h3>Rafi Syihab di Mata Orang Lain</h3>
                         <div class="testimonial-container">
                             <section class="testimonial-content">
@@ -213,10 +213,10 @@
                         <a href="mailto:rafisyihab3@gmail.com" class="profile-email">rafisyihab3@gmail.com</a>
                     </section>
                     <section class="profile-social-links">
-                        <a href="#" class="fab fa-github"></a>
-                        <a href="#" class="fab fa-linkedin-in"></a>
-                        <a href="#" class="fab fa-facebook"></a>
-                        <a href="#" class="fab fa-instagram"></a>
+                        <a href="https://github.com/rfsyhb" target="_blank" class="fab fa-github"></a>
+                        <a href="https://id.linkedin.com/in/rafi-syihab-9020a51a0" target="_blank" class="fab fa-linkedin-in"></a>
+                        <a href="https://www.facebook.com/OzRafi/" target="_blank" class="fab fa-facebook"></a>
+                        <a href="https://www.instagram.com/ozrafi/" target="_blank" class="fab fa-instagram"></a>
                     </section>
                 </div>
             </aside>
