penambahan animasi scroll pada app.js

--- a/dicoding/tugas-akhir-membuat-website/index.html
+++ b/dicoding/tugas-akhir-membuat-website/index.html
@@ -31,10 +31,10 @@
         <!-- navigasi ke sections dalam halaman website -->
         <nav class="nav-list">
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#portofolio">Portofolio</a></li>
-                <li><a href="#about">about</a></li>
-                <li><a href="#testimonial">Testimonial</a></li>
+                <li><a href="#home" class="nav-link">Home</a></li>
+                <li><a href="#portofolio" class="nav-link">Portofolio</a></li>
+                <li><a href="#about" class="nav-link">about</a></li>
+                <li><a href="#testimonial" class="nav-link">Testimonial</a></li>
             </ul>
         </nav>
     </header>
